# muzzle

./: .coderabbit.yaml  .gitignore  .greptile.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  GOALS.md  LICENSE  Makefile  README.md  SECURITY.md  config.example  greptile.json  mise.toml  release-please-config.json  release.toml
.agents/evolve/: cycle-history.jsonl
.agents/rpi/: next-work.jsonl
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  release-please.yml  release.yml  scorecards.yml
docs/: architecture.md  sandbox.md
docs/superpowers/plans/: 2026-03-16-muzzle-memory-v01.md  2026-03-16-muzzle-memory-v01.md.tasks.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_bash_write_paths.rs  fuzz_extract_repo.rs  fuzz_git_safety.rs  fuzz_sandbox.rs
hooks/: Cargo.toml
hooks/src/: changelog.rs  config.rs  gitcheck.rs  lib.rs  log.rs  mcp.rs  output.rs  sandbox.rs  session.rs
hooks/src/vcs/: git.rs  jj.rs  mod.rs
hooks/src/worktree/: mod.rs
hooks/tests/: claude_md.rs  integration.rs  jj_backend.rs  proptest_sandbox.rs
memory/: Cargo.toml
memory/src/: capture.rs  inject.rs  lib.rs  main.rs  store.rs
memory/tests/: integration.rs
persona/: Cargo.toml  personas-seed.toml
persona/src/: broker.rs  grow.rs  lib.rs  main.rs  preamble.rs  release.rs  schema.rs  seed.rs  types.rs
persona/tests/: integration_test.rs
scripts/: bench-coldstart.sh  check-claude-md.sh  check-coldstart.sh  run-shellcheck.sh
src/: changelog.rs  config.rs  gitcheck.rs  lib.rs  log.rs  mcp.rs  output.rs  sandbox.rs  session.rs
src/worktree/: cleanup.rs  git.rs  mod.rs
tests/: claude_md.rs  integration.rs
