[package]
name = "hooks-v3"
version = "0.1.0"
edition = "2021"
description = "Claude Code session isolation hooks (Rust implementation)"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
flate2 = "1"
libc = "0.2"

[lib]
name = "hooks_v3"
path = "src/lib.rs"

[[bin]]
name = "session-start"
path = "src/bin/session_start.rs"

[[bin]]
name = "permissions"
path = "src/bin/permissions.rs"

[[bin]]
name = "changelog"
path = "src/bin/changelog_bin.rs"

[[bin]]
name = "session-end"
path = "src/bin/session_end.rs"

[[bin]]
name = "ensure-worktree"
path = "src/bin/ensure_worktree.rs"

[profile.release]
opt-level = "s"
lto = true
strip = true
