[package]
name = "muzzle-persona"
version = "0.1.0"
edition = "2021"
description = "Persona assignment broker for AI coding agents"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
toml = "0.8"

[[bin]]
name = "muzzle-persona"
path = "src/main.rs"
